@@ -1,3 +1,8 @@
+2003-03-20  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* time.test: Added a test package.
+	* pkgIndex.tcl: Added a package index file.
+
 2003-03-17  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* time.tcl:
